--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,17 @@
 language: node_js
 node_js:
   - 8
+cache:
+  directories:
+  - node_modules
+  yarn: true
 script:
-  - npm -- test --coverage && cat ./coverage/lcov.info | coveralls
+  - yarn build
+  - yarn -- test --coverage && cat ./coverage/lcov.info | coveralls
+# deploy:
+#   provider: pages
+#   skip_cleanup: true
+#   github_token: $GITHUB_TOKEN
+#   local-dir: build
+#   on:
+#   branch: master
